# Cellular-Noise

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: shader.hpp  shader_src.hpp  style.hpp
src/: main.cpp  shader.cpp
